2006-08-29 [paul]	1.0.2cvs6

	* .cvsignore
	* src/acpi_notifier.c
		remove references to pluginconfig.h(.in),
		the files ceased to exist

2006-08-28 [paul]	1.0.2cvs5

	* configure.ac
	* po/Makefile.in.in
	* po/Makevars
	* po/stamp-po
	* src/Makefile.am
	* src/acpi_notifier.c
                require autoconf 2.60, enabling building
		with gettext 0.15 (gettext 0.14.x build still
		possible). Replace Makefiles with versions
		from gettext 0.15.
		Remove configure option --with-localedir. The
		option that is provided directly by autoconf
		2.60 can be used instead: --localedir
		Add missing file in po/
		All thanks to Colin																

2006-08-27 [wwp]	1.0.2cvs4

	* src/acpi_notifier.c
		fix plugin compilation (N_ undefined).

2006-08-27 [colin]	1.0.2cvs3

	* src/acpi_notifier.c
		Implement plugin_provides()

2006-08-18 [paul]	1.0.2cvs2

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-08-09 [colin]	1.0.2cvs1

	* src/acpi_notifier.c
		Don't wait for the thread if we're
		exiting. Requires SC 2.4.0cvs36

2006-06-12 [paul]	1.0.2

	1.0.2 released

2006-06-12 [paul]	1.0.1cvs6

	* po/Makefile.in.in
		fix autoconf warning

2006-06-06 [wwp]	1.0.1cvs5

	* po/.cvsignore
		ignore more generated files.

2006-06-06 [wwp]	1.0.1cvs4

	* src/.cvsignore
		don't ignore deprecated files.

2006-06-06 [wwp]	1.0.1cvs3

	* .cvsignore
	* config/.cvsignore
	* m4/.cvsignore
	* src/.cvsignore
		ignore more generated files.

2006-06-06 [wwp]	1.0.1cvs2

	* src/plugin_version.h.in
	* src/acpi_notifier.c
	* src/Makefile.am
	* configure.ac
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	1.0.1cvs1

	* commitHelper
	* PATCHSETS
		introducing commitHelp for plugins too.

2006-04-07 [colin] 	1.0.1

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2006-04-06 [paul]

	* po/es.po
	* po/fi.po
	* po/fr.po
	* po/pt_BR.po
	* po/sk.po