@@ -10,3 +10,4 @@
 ( cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/acpi_notifier.c;  ) > 1.0.2cvs4.patchset
 ( cvs diff -u -r 1.1.2.29 -r 1.1.2.30 configure.ac;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 po/Makefile.in.in;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 po/Makevars;  diff -u /dev/null po/stamp-po;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/Makefile.am;  cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/acpi_notifier.c;  ) > 1.0.2cvs5.patchset
 ( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 .cvsignore;  cvs diff -u -r 1.1.2.15 -r 1.1.2.16 src/acpi_notifier.c;  ) > 1.0.2cvs6.patchset
+( cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/acpi_notifier.c;  ) > 1.0.2cvs7.patchset
